--- a/templates/agree_disagree.html
+++ b/templates/agree_disagree.html
@@ -9,7 +9,7 @@
 <div class="wrap">
   <h1 class="likert-header"></h1>
   <form action="">
-    <label class="statement"><h2>I am the life of the party.</h2></label>
+    <label class="statement">I am the life of the party.</label>
     <ul class='likert'>
       <li>
         <input type="radio" name="EXT1" value="strong_agree">
@@ -33,7 +33,7 @@
       </li>
     </ul>
 
-    <label class="statement"><h2>I don't talk a lot.</h2></label>
+    <label class="statement">I don't talk a lot.</label>
     <ul class='likert'>
       <li>
         <input type="radio" name="EXT2" value="strong_agree">
