--- a/templates/OPN.html
+++ b/templates/OPN.html
@@ -285,14 +285,13 @@
     </ul>
     
 
-
-   <div class="buttons">
-      <input type="button" onclick="location.href='CSN';" value="Back" />
-      <button class="clear">Clear</button>
-     <button class="submit" href="/predict">sjb</button>
-      <input type="submit" onclick="location.href='result';" />
-    </div>
-  </form>
+>
+<div class="buttons">
+  <input type="button" onclick="location.href='CSN';" value="Back" />
+  <button class="clear">Clear</button>
+  <input type="button" class="submit" onclick="location.href='result';" value="Submit"/>
+</div
+</form>
 </div>
 <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
 <script src="{{url_for('static', filename='js/popper.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
