--- a/templates/predict.html
+++ b/templates/predict.html
@@ -155,7 +155,9 @@
     </div> <!-- end of container -->
     <div class="result" >
 
-<div></div>
+<div>
+
+</div>
       <br> Your Personality is:<br>
       <p >{{ result }}</p>
     </div>
