--- a/templates/result.html
+++ b/templates/result.html
@@ -50,8 +50,12 @@
 <!-- end of navbar -->
 <!-- end of preloader -->
 
-bdfhs0
-
+<h1> </h1>
+    <div class="result" >
+      <br> Your Personality is:<br>
+      <p >{{ result }}</p>
+    </div>
+  </div>
 
 
 <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
