--- a/templates/EXT.html
+++ b/templates/EXT.html
@@ -55,7 +55,7 @@
 
 <div class="wrap">
   <h1 class="likert-header"></h1>
-  <form action="">
+  <form id="contactFormEX" data-toggle="validator" data-focus="true" action="{{ url_for('result') }}" method="POST">
     <label class="statement">I am the life of the party.</label>
     <ul class='likert'>
       <li>
