--- a/templates/result.html
+++ b/templates/result.html
@@ -36,7 +36,6 @@
     <div class="bounce3"></div>
   </div>
 </div>
-<
 
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -50,12 +49,11 @@
 <!-- end of navbar -->
 <!-- end of preloader -->
 
-<h1> </h1>
+<h1> Your Personality is : </h1>
     <div class="result" >
-      <br> Your Personality is:<br>
+
       <p >{{ result }}</p>
     </div>
-  </div>
 
 
 <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
