--- a/templates/AGR.html
+++ b/templates/AGR.html
@@ -51,7 +51,7 @@
 
 <div class="wrap">
   <h1 class="likert-header"></h1>
-  <form action="">
+  <form id="contactFormA" data-toggle="validator" data-focus="true" action="{{ url_for(' result') }}" method="POST">
     <label class="statement">3.1 I feel little concern for others.</label>
     <ul class='likert'>
       <li>
