--- a/templates/CSN.html
+++ b/templates/CSN.html
@@ -51,7 +51,7 @@
 
 <div class="wrap">
   <h1 class="likert-header"></h1>
-  <form action="">
+  <form id="contactFormC" data-toggle="validator" data-focus="true" action="{{ url_for('result') }}" method="POST">
     <label class="statement">4.1 I am always prepared.</label>
     <ul class='likert'>
       <li>
