--- a/templates/OPN.html
+++ b/templates/OPN.html
@@ -51,7 +51,7 @@
 
 <div class="wrap">
   <h1 class="likert-header"></h1>
-  <form action="">
+  <form id="contactFormO" data-toggle="validator" data-focus="true" action="{{ url_for('result') }}" method="POST">
     <label class="statement">5.1 I have a rich vocabulary.</label>
     <ul class='likert'>
       <li>
