--- a/templates/EST.html
+++ b/templates/EST.html
@@ -51,7 +51,7 @@
 
 <div class="wrap">
   <h1 class="likert-header"></h1>
-  <form id="contactFormES" data-toggle="validator" data-focus="true" action="{{ url_for('result') }}" method="POST">
+  <form action="">
     <label class="statement">2.1 I get stressed out easily.</label>
     <ul class='likert'>
       <li>
