--- a/templates/EXT.html
+++ b/templates/EXT.html
@@ -55,7 +55,7 @@
 
 <div class="wrap">
   <h1 class="likert-header"></h1>
-  <form action="">
+  <form data-toggle="validator" data-focus="true" action="{{ url_for('EXT') }}" method="POST">
     <label class="statement">I am the life of the party.</label>
     <ul class='likert'>
       <li>
@@ -291,9 +291,9 @@
 
 
     <div class="buttons">
-      <input type="button" onclick="location.href='/';" value="Back" />
+      <input type="submit" onclick="location.href='/';" value="Back" />
       <button class="clear">Clear</button>
-      <input type="button" onclick="location.href='EST';" value="Next" />
+      <input type="submit"   href="EST.html" value="Next" />
     </div>
   </form>
 </div>
