--- a/templates/CSN.html
+++ b/templates/CSN.html
@@ -288,7 +288,7 @@
 <div class="buttons">
       <input type="button" onclick="location.href='AGR';" value="Back" />
       <button class="clear">Clear</button>
-      <input type="submit" onclick="location.href='OPN';" value="Next" />
+      <input type="submit"   href="OSN.html" value="Next" />
     </div>
   </form>
 </div>
