--- a/templates/OPN.html
+++ b/templates/OPN.html
@@ -287,7 +287,7 @@
 <div class="buttons">
   <input type="submit"  onclick="location.href='CSN';" value="Back" />
   <button class="clear">Clear</button>
-  <input type="submit"   href="OPN.html" value="Submit" />
+  <input type="submit"   href="result" value="Submit" />
 </div>
 </form>
 </div>
