--- a/templates/AGR.html
+++ b/templates/AGR.html
@@ -287,7 +287,7 @@
 <div class="buttons">
       <input type="button"  onclick="location.href='EXT';" value="Back" />
       <button class="clear">Clear</button>
-      <input ttype="submit"  onclick="location.href='CSN';" value="Next" />
+      <input type="submit"  onclick="location.href='CSN';" value="Next" />
     </div>
 
   </form>
